[tool.poetry]
name = "fm-sentinel-2"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <111972238+MaksymBratsiun@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fm_sentinel_2"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.6"
pandas = "^2.1.4"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
